Fix responsive design on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,13 +25,13 @@ h2 {
   padding: 0.5rem 0;
 }
 
-.btn-del {
-  color: black;
+/* navbar */
+.nav-item {
+  margin-right: 0rem;
 }
 
-.btn-del:hover {
-  cursor: pointer;
-  color: rgb(19, 19, 19);
+.searchbox {
+  margin: 1rem 0;
 }
 
 /* carousel */
@@ -47,12 +47,11 @@ h2 {
 }
 
 .carousel-caption h2 {
-  color: #fff;
-  font-size: 2.5vw;
+  font-size: 1rem;
 }
 
 .carousel img {
-  height: 300px;
+  height: 250px;
   padding: 30px;
   margin: 40px;
   border-radius: 50%;
@@ -80,7 +79,7 @@ h2 {
   display: block;
   object-fit: cover;
   width: 100%;
-  height: 300px;
+  height: 250px;
 }
 
 .cart-product-img {
@@ -92,16 +91,24 @@ h2 {
 
 /* Desktop */
 @media only screen and (min-width: 768px) {
+  .searchbox {
+    margin: 0;
+  }
+
   .form-select {
     padding: 1rem 1.5rem;
   }
 
   .carousel-caption h2 {
-    font-size: 1.5vw;
+    font-size: 1.4rem;
+  }
+
+  .carousel img {
+    height: 300px;
   }
 
   .product-img {
-    height: 250px;
+    height: 300px;
   }
 
   .cart-product-img {
